--- a/bse/TODO
+++ b/bse/TODO
@@ -1,3 +1,11 @@
+NEW:
+- loading (restore) may only work when not playing (to keep consistency
+  and avoid lock contentions during playback)
+- during playback the set instruments needs to be fixed on a song  
+- fix sequential IDs to be per-type, remove project and song special casing
+- GSL_ALWAYS_PROCESS into instance, remove n_ostreams check from IS_CONSUMER
+
+OLD:
 general:
 -	bse_object_do_store_private() should not save equally named params (from
 	different heirarchy levels), actually this is a general problem with GUIs
