--- a/bse/TODO
+++ b/bse/TODO
@@ -1,4 +1,5 @@
 NEW:
+- alive keeping for waves which are removed, but whose index is in use?
 - loading (restore) may only work when not playing (to keep consistency
   and avoid lock contentions during playback)
 - during playback the set instruments needs to be fixed on a song  
