--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jan 24 07:18:14 2002  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstutils.c (gnome_canvas_FIXME_hard_update): try disabling
+	this for while.
+
 Thu Jan 24 01:10:35 2002  Tim Janik  <timj@gtk.org>
 
 	* dosc/bse-categories.txt: changed top category policy for synthesis
