--- a/plugins/ChangeLog
+++ b/plugins/ChangeLog
@@ -1,3 +1,8 @@
+Thu Jan 24 11:03:49 2002  Tim Janik  <timj@gtk.org>
+
+	* bsesnooper.c (bse_snooper_context_create): get rid of hard coded
+	number of istreams.
+
 Thu Jan 24 01:38:49 2002  Tim Janik  <timj@gtk.org>
 
 	* *.c: fix categories so /Modules/ is used instead of /Source/.
