--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Tue Jan 29 15:19:20 2002  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstdial.[hc]: fix adjustment value handling and
+	comparisions, since it uses doubles in gtk+-2.0.
+
+	* beast-gtk/bstmain.c: add --no-plugins option to speed up
+	debugging.
+
 Thu Jan 24 11:19:31 2002  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstcanvaslink.c: colorize jchannel connection tags
