--- a/bse/ChangeLog
+++ b/bse/ChangeLog
@@ -1,3 +1,11 @@
+Thu Jan 31 01:15:24 2002  Tim Janik  <timj@gtk.org>
+
+	* gslloader-wav.c: deal gracefully with overlong headers.
+
+	* bseconstant.c: fix variable names.
+	
+	* bsewave.[hcp]*: export n_channels.
+	
 Tue Jan 29 15:16:51 2002  Tim Janik  <timj@gtk.org>
 
 	* gslengine.[hc], gslopmaster.c: make consumer property a per module
